# Kingfish

./: .clang-format  .gitignore  .replit  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Makefile  NOTES.md  README.md  engine-interface.txt  old readme.md  results-vs-stockfish.pgn  st  sunfish.py
.ccls-cache/@@home@runner@CXX-Chess/: @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@backward@binders.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@alloc_traits.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@allocator.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_ios.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_ios.tcc.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_string.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_string.tcc.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@char_traits.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@charconv.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@concept_check.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@cpp_type_traits.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@cxxabi_forced.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@cxxabi_init_exception.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@exception.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@exception_defines.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@exception_ptr.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@functexcept.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@functional_hash.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@hash_bytes.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@ios_base.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@istream.tcc.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@locale_classes.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@locale_classes.tcc.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@locale_facets.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@locale_facets.tcc.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@localefwd.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@memoryfwd.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@move.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@nested_exception.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@ostream.tcc.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@ostream_insert.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@postypes.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@predefined_ops.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@ptr_traits.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@range_access.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@std_abs.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@stl_algobase.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@stl_construct.h.blob  (+139 more)
include/: ai.hpp  bitboard.hpp  board.hpp  bonustables.hpp  consts.hpp  defaultdict.hpp  defines.hpp  game.hpp  generator.hpp  gui.hpp  hashtable.hpp  location.hpp  main.h  main.hpp  move.hpp  openingbook.hpp  options.hpp  pieces.h  pieces.hpp  polyglot.hpp  position.hpp  searcher.hpp  transtable.hpp  types.hpp  uci.hpp  zobrist.hpp
libs/: libSDL2-2.0.0.dylib  libSDL2.la  libSDL2_image-2.0.0.dylib  libSDL2_image.la
src/: ai.cpp  board.cpp  game.cpp  gui.cpp  hashtable.hpp  main.cpp  move.hpp  openingbook.cpp  piece.cpp  pieces.cpp  position.cpp  searcher.cpp  transtable.cpp  uci.cpp
(+75 files in other folders)
